--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/mdx": "^3.0.1",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/sitemap": "^3.1.5",
+    "@glidejs/glide": "^3.6.1",
     "astro": "^4.9.1"
   }
 }
